# DeepPrivacy

./: .gitignore  app.py  pyproject.toml  requirements.txt
test_data/: id_card_001.png:Zone.Identifier
utils/: HTTP_request.py  httpserver_test.py  stacked_widget_test.py  utility_widget.py
windows/: admin_service.py  authentication_widget.py  basic_window.py  function_widgets.py  login.ui  login_widget.py  login_window.py  main_window.py  user_service.py
